compiler/e2e/test/snapshot/memory_checker/move_in_with/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/memory_checker/move_in_with/main.pnx:28:18
   │
28 │             drop(nonCopyableOuter) # not fine
   │                  ^^^^^^^^^^^^^^^^ the predicate `marker core::Copy[main::NonCopyable]` is not satisfied

error: Compilation aborted due to 1 error(s)



stdout:
